# rs2-turtlebot

./: README.md
depth_camera/: depthcamera_test.cpp
depth_camera/depth_camera_tests/: CMakeLists.txt  package.xml
depth_camera/depth_camera_tests/src/: depthcamera_test.cpp
launch_sensor_fusion_slam/: CMakeLists.txt  package.xml
launch_sensor_fusion_slam/launch/: full_system_launch.py
launch_sensor_fusion_slam/rviz/: working_camera_image.rviz
launch_sensor_fusion_slam/src/: lidar_test.cpp
lidar/: lidar_test.cpp
lidar/lidar_tests/: CMakeLists.txt  package.xml
lidar/lidar_tests/src/: lidar_test.cpp
localisation/sensor_fusion_localisation_tests/: CMakeLists.txt  package.xml
localisation/sensor_fusion_localisation_tests/src/: localisation_test.cpp
mapping_world/: my_map.pgm  my_map.yaml
rgb_camera_detect/: package.xml  setup.cfg  setup.py
rgb_camera_detect/rgb_camera_detect/: colour_object_detector.py
